--- a/ATMDesign/docker/docker-compose.yml
+++ b/ATMDesign/docker/docker-compose.yml
@@ -2,9 +2,41 @@ version: '3'
 services:
   app:
     container_name: atm
-    build: .
     ports: 
       - 50051:50051
     restart: on-failure
     image : ssastry22/atlas-repo:atm
-    network_mode : host
+    depends_on:
+      - mysql-container
+    networks:
+      - fullstack
+#    network_mode: host
+    environment:
+      - DB_HOST
+      - DB_USER
+      - DB_PASSWORD
+      - DB_NAME
+      - DB_PORT
+
+  mysql-container:
+    image : mysql:5.7
+    container_name: full_db_mysql
+    ports: 
+       - 3306:3306
+    environment: 
+       - MYSQL_ROOT_HOST=${DB_HOST} 
+       - MYSQL_USER=${DB_USER}
+       - MYSQL_PASSWORD=${DB_PASSWORD}
+       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    volumes:
+    - /var/lib/mysql:/var/lib/mysql
+#    - ./mysql_local.cnf:/etc/mysql/conf.d/mysql_local.cnf:ro
+#    network_mode: host
+    networks:
+      - fullstack
+
+#volumes:
+#  database_mysql:
+networks:
+  fullstack:
+    driver: bridge
